# uvctl

./: .dockerignore  .gitignore  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: api.rst  automation.rst  cli.rst  conf.py  index.rst  limitations.rst  overview.rst  security.rst  setup.rst
src/uvctl/: __init__.py  cli.py  config.py  escalate.py  ledger.py  pathmgmt.py  setup.py  snapshot.py  suffix.py  validate.py
tests/: conftest.py
tests/fixtures/evilfixture/: pyproject.toml  setup.py
tests/fixtures/evilfixture/evilfixture/: __init__.py
tests/system/: test_coverage.py  test_install_execute.py  test_setup_invariant.py  test_smoke.py  test_zz_system_bin.py
tests/unit/: test_cli.py  test_config.py  test_dependency_policy.py  test_escalate.py  test_ledger.py  test_pathmgmt.py  test_setup.py  test_snapshot.py  test_suffix.py  test_validate.py
