[project]
name = "uvctl"
version = "0.0.0"
description = "Manage shared `uv tool` installs for teams and shared servers, without running package code as root."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "attackd" }]

# Dependency policy: runtime code is stdlib-only. The ONLY permitted runtime
# dependency is the
# `tomli` backport, and only on interpreters predating stdlib `tomllib`.
# CI asserts the built distribution declares nothing beyond this line.
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.scripts]
uvctl = "uvctl.cli:main"
uvxg = "uvctl.cli:main_uvxg"

[project.optional-dependencies]
# Docs toolchain lives only here, never as a runtime dependency.
docs = [
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints",
]

# Test/lint tooling. Kept OUT of [project.dependencies] and out of the docs
# extra so it can never leak into the runtime distribution the dependency
# policy check inspects. Install with `uv sync` (uv reads dependency-groups).
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# System tests mutate users/dirs/sudoers and MUST NOT run on a dev host.
# They are deselected by default; opt in with `-m system` (only ever done
# inside the disposable container / CI). See tests/conftest.py.
addopts = "-m 'not system'"
markers = [
    "system: mutates the host (users, /opt, /etc, sudoers). Container/CI only.",
]

[tool.ruff]
target-version = "py39"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
# D = pydocstyle: every public module/class/function needs a Google-style
# docstring, enforced project-wide). E/F/I/UP/B for hygiene.
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D203", "D213"]  # incompatible with the Google convention below

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # tests document themselves via names
